# hindarot

./: Config.mk.in  Makefile.in  Rules.mk.in  aclocal.m4  basis.f90  boltzmann.f90  config.h.in  configure  configure.ac  deigen.f  eigen.f90  externals.f90  glue.f90  hamiltonian.f90  hindarot.f90  inout.f90  keydef.c  param.f90  states.f90  symmetry.f90  three_j.f90  transition.f90
config/: acx_blas.m4  acx_getkw.m4  acx_lapack.m4  acx_mpi.m4  dec_osf.conf  linux_i386.conf
